--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,4 +1,10 @@
 <% provide(:title, "About") %>
+<!DOCTYPE html>
+<html>
+<head>
+  <title><%= yield(:title) %> | Ruby on Rails Tutorial Sample App</title>
+</head>
+<body>
 <h1>About</h1>
 <p>
   <a href="https://railstutorial.jp/">Ruby on Rails Tutorial</a>
@@ -8,3 +14,5 @@
   <a href="http://rubyonrails.org/">Ruby on Rails</a>.
   This is the sample application for the tutorial.
 </p>
+</body>
+</html>
