--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to "Home",   '#' %></li>
         <li><%= link_to "Help",   '#' %></li>
-        <li><%= link_to "About", static_pages_about_path %></li>
+        <li><%= link_to "About", about_path %></li>
         <li><%= link_to "Log in", '#' %></li>
       </ul>
     </nav>
